--- a/app/src/main/res/layout/activity_actividad_memoria_interna.xml
+++ b/app/src/main/res/layout/activity_actividad_memoria_interna.xml
@@ -63,27 +63,27 @@
 
         <Button
             android:id="@+id/btnGuardar"
-            android:layout_width="wrap_content"
+            android:layout_width="194dp"
             android:layout_height="wrap_content"
             android:text="Guardar" />
 
         <Button
             android:id="@+id/btnBuscar"
-            android:layout_width="100dp"
+            android:layout_width="192dp"
             android:layout_height="wrap_content"
             android:text="Buscar" />
 
-        <Button
-            android:id="@+id/button6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Button" />
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/RecyclerListado"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="316dp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/RecyclerListado"
+            android:layout_width="match_parent"
+            android:layout_height="498dp" />
+    </LinearLayout>
 
 </LinearLayout>
