--- a/app/src/main/res/layout/activity_actividad_memoria_programa2.xml
+++ b/app/src/main/res/layout/activity_actividad_memoria_programa2.xml
@@ -15,5 +15,5 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerReyes"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="626dp" />
 </LinearLayout>
