--- a/app/src/main/res/layout/item_reyes.xml
+++ b/app/src/main/res/layout/item_reyes.xml
@@ -2,24 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="35dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="Nombre: " />
+            android:text="Nombre: "
+            android:textColor="@android:color/holo_blue_dark" />
 
         <TextView
             android:id="@+id/txtNombreReyes"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="" />
@@ -28,22 +29,32 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="69dp"
+        android:layout_height="39dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Periodo: " />
+            android:layout_height="match_parent"
+            android:text="Periodo: "
+            android:textColor="@android:color/holo_blue_dark" />
 
         <TextView
             android:id="@+id/txtPeriodo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="___________________________"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/holo_red_dark"
+        android:textStyle="italic" />
 
 </LinearLayout>
