--- a/app/src/main/res/menu/menu_toolbar_items.xml
+++ b/app/src/main/res/menu/menu_toolbar_items.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/ItemPrograma"
         android:icon="@drawable/android"
-        android:title="@string/action_settings"
+        android:title="MP"
         app:showAsAction="always" />
     <item
         android:id="@+id/ItemMI"
@@ -14,6 +14,6 @@
     <item
         android:id="@+id/ItemSD"
         android:icon="@drawable/memoria"
-        android:title="@string/action_settings"
+        android:title="ME"
         app:showAsAction="always" />
 </menu>
