--- a/app/src/main/res/layout/fragment_frg_enviar.xml
+++ b/app/src/main/res/layout/fragment_frg_enviar.xml
@@ -12,10 +12,13 @@
 
     <Button
         android:id="@+id/btnContar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="151dp"
+        android:layout_gravity="center"
         android:layout_weight="1"
-        android:text="Click" />
+        android:gravity="center"
+        android:text="Click"
+        android:textSize="40dp" />
 
 
 </LinearLayout>
