--- a/app/src/main/res/layout/activity_actividad_escuchar_fragmento.xml
+++ b/app/src/main/res/layout/activity_actividad_escuchar_fragmento.xml
@@ -9,14 +9,14 @@
     <fragment
         android:id="@+id/FrgRecibir"
         android:name="com.example.progra.vistas.fragmentos.FrgRecibir"
-        android:layout_width="wrap_content"
-        android:layout_height="748dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1" />
 
     <fragment
         android:id="@+id/FrgEnviar"
         android:name="com.example.progra.vistas.fragmentos.FrgEnviar"
-        android:layout_width="wrap_content"
-        android:layout_height="752dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1" />
 </LinearLayout>
