--- a/app/src/main/res/layout/activity_actividad_producto_helper.xml
+++ b/app/src/main/res/layout/activity_actividad_producto_helper.xml
@@ -126,8 +126,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewDB"
-        android:layout_width="383dp"
-        android:layout_height="452dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:translationX="15dp" />
 
 </LinearLayout>
