--- a/app/src/main/res/layout/fragment_frg_dos.xml
+++ b/app/src/main/res/layout/fragment_frg_dos.xml
@@ -4,32 +4,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     tools:context="com.example.progra.vistas.fragmentos.FrgDos">
 
     <EditText
         android:id="@+id/txtN1Frg2"
-        android:layout_width="match_parent"
+        android:layout_width="148dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:ems="10"
-        android:inputType="number"/>
+        android:hint="Valor 1"
+        android:inputType="number"
+        android:textColor="#FFF"
+
+        android:textColorHint="#AAAAAA" />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="match_parent"
+        android:id="@+id/textView2"
+        android:layout_width="38dp"
         android:layout_height="wrap_content"
-        android:text=" - " />
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text=" - "
+        android:textColor="#FFF"
+        android:textSize="24sp" />
 
     <EditText
         android:id="@+id/txtN2Frg2"
-        android:layout_width="match_parent"
+        android:layout_width="134dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:ems="10"
-        android:inputType="number"/>
+        android:hint="Valor 2"
+        android:inputType="number"
+        android:textColor="#FFF"
+        android:textColorHint="#AAAAAA" />
 
     <Button
-        android:id="@+id/btnRestartFrg2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/btnRestarFrg2"
+        android:layout_width="wrap_content"
+        android:layout_height="42dp"
+        android:layout_weight="1"
         android:text="Restar" />
 </LinearLayout>
