--- a/app/src/main/res/layout/fragment_frg_uno.xml
+++ b/app/src/main/res/layout/fragment_frg_uno.xml
@@ -3,32 +3,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context="com.example.progra.vistas.fragmentos.FrgUno">
 
     <EditText
         android:id="@+id/txtN1Frg1"
+        android:hint="Valor 1"
+        android:textColorHint="#AAAAAA"
         android:layout_width="148dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="" />
+        android:inputType="number"
+
+        android:textColor="#FFF" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_width="38dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text=" + " />
+        android:gravity="center"
+        android:text=" + "
+        android:textColor="#FFF"
+        android:textSize="24sp" />
 
     <EditText
         android:id="@+id/txtN2Frg1"
-        android:layout_width="159dp"
+        android:layout_width="134dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="" />
+        android:hint="Valor 2"
+        android:inputType="number"
+        android:textColor="#FFF"
+        android:textColorHint="#AAAAAA" />
 
     <Button
         android:id="@+id/btnSumarFrg1"
